EA-219: Update to OpenMRS Platform 2.8.x (#263)
* Fix syntax errors

* Fix test errors

* Update to  Platform 2.8.0-beta

* Fix test error

* Fix test error

* Remove ProviderServiceFacade.java

* Remove EmrApiContextSensitiveTest.java

* Avoid the use of lenient

* Add the surefire plugin to the omod pom

* Change to Platform 2.8.0-SNAPSHOT

* Remove MetadataUtil.java

* Set the version to 3.0,0-SNAPSHOT

* Remove Provider module from aware modules list

* Remove unused imports from HibernateEmrPatientDAO

* Update the reporting and calculation modules to the latest snapshot

* Fix code issues

* Fix code issues

* Fix issues with Java 21